tests/purs/failing/3329.out
Error found:
in module [33mMain[0m
at tests/purs/failing/3329.purs:24:8 - 24:11 (line 24, column 8 - line 24, column 11)

  No type class instance was found for
  [33m                            [0m
  [33m  Main.Inject g0            [0m
  [33m              (Either f1 g0)[0m
  [33m                            [0m
  The following instance partially overlaps the above constraint, which means the rest of its instance chain will not be considered:

    [33mMain.injectLeft[0m


while checking that type [33mforall (@f :: Type) (@g :: Type). Inject f g => f -> g[0m
  is at least as general as type [33mg0 -> Either f1 g0[0m
while checking that expression [33minj[0m
  has type [33mg0 -> Either f1 g0[0m
in value declaration [33minjR[0m

where [33mf1[0m is a rigid type variable
        bound at (line 24, column 8 - line 24, column 11)
      [33mg0[0m is a rigid type variable
        bound at (line 24, column 8 - line 24, column 11)

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

